--- a/debian/changelog
+++ b/debian/changelog
@@ -3,5 +3,6 @@ php-horde-kronolith (3.0.15-1) unstable; urgency=low
   * kronolith package
   * Initial packaging (Closes: #657377)
   * Copyright file by Soren Stoutner and Jay Barksdale
+  * Build-depends on php-horde-role
 
- -- Mathieu Parent <sathieu@debian.org>  Mon, 20 Feb 2012 08:46:35 +0100
+ -- Mathieu Parent <sathieu@debian.org>  Mon, 20 Feb 2012 08:52:25 +0100
