--- a/debian/changelog
+++ b/debian/changelog
@@ -6,5 +6,7 @@ php-horde-kronolith (3.0.15-1) unstable; urgency=low
   * Build-depends on php-horde-role
   * Updated debian/pearrc to install Horde apps in /usr/share/horde
     instead of /usr/share/horde4
+  * Updated d/rules to install apps in /usr/share/horde and config in
+    /etc/horde
 
- -- Mathieu Parent <sathieu@debian.org>  Thu, 07 Jun 2012 15:14:13 +0200
+ -- Mathieu Parent <sathieu@debian.org>  Thu, 07 Jun 2012 17:07:44 +0200
