--- a/debian/changelog
+++ b/debian/changelog
@@ -8,5 +8,6 @@ php-horde-kronolith (3.0.15-1) unstable; urgency=low
     instead of /usr/share/horde4
   * Updated d/rules to install apps in /usr/share/horde and config in
     /etc/horde
+  * Updated Vcs-* fields
 
- -- Mathieu Parent <sathieu@debian.org>  Thu, 07 Jun 2012 17:07:44 +0200
+ -- Mathieu Parent <sathieu@debian.org>  Thu, 07 Jun 2012 18:13:04 +0200
