--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+php-horde-kronolith (3.0.17-1) UNRELEASED; urgency=low
+
+  * New upstream version 3.0.17
+
+ -- Mathieu Parent <sathieu@debian.org>  Fri, 08 Jun 2012 17:21:09 +0200
+
 php-horde-kronolith (3.0.15-1) unstable; urgency=low
 
   * kronolith package
