--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,9 @@
-php-horde-kronolith (3.0.17-1) UNRELEASED; urgency=low
+php-horde-kronolith (4.0.2-1) UNRELEASED; urgency=low
 
   * New upstream version 3.0.17
+  * New upstream version 4.0.2
 
- -- Mathieu Parent <sathieu@debian.org>  Fri, 08 Jun 2012 17:21:09 +0200
+ -- Mathieu Parent <sathieu@debian.org>  Fri, 30 Nov 2012 19:56:42 +0100
 
 php-horde-kronolith (3.0.15-1) unstable; urgency=low
 
