--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+php-horde-kronolith (4.0.2-2) UNRELEASED; urgency=low
+
+  * Add a description of Horde in long description
+
+ -- Mathieu Parent <sathieu@debian.org>  Sun, 06 Jan 2013 21:45:43 +0100
+
 php-horde-kronolith (4.0.2-1) unstable; urgency=low
 
   * kronolith package
