--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
 php-horde-kronolith (4.0.2-2) UNRELEASED; urgency=low
 
   * Add a description of Horde in long description
+  * Updated Standards-Version to 3.9.4, no changes
 
  -- Mathieu Parent <sathieu@debian.org>  Sun, 06 Jan 2013 21:45:43 +0100
 
