--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-php-horde-kronolith (4.0.3-1) UNRELEASED; urgency=low
+php-horde-kronolith (4.0.3-1) unstable; urgency=low
 
   * New upstream version 4.0.3
 
- -- Mathieu Parent <sathieu@debian.org>  Thu, 10 Jan 2013 20:02:39 +0100
+ -- Mathieu Parent <sathieu@debian.org>  Thu, 10 Jan 2013 22:37:33 +0100
 
 php-horde-kronolith (4.0.2-2) unstable; urgency=low
 
