--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+php-horde-kronolith (4.0.4-1) UNRELEASED; urgency=low
+
+  * New upstream version 4.0.4
+
+ -- Mathieu Parent <sathieu@debian.org>  Sat, 06 Apr 2013 23:18:18 +0200
+
 php-horde-kronolith (4.0.3-1) unstable; urgency=low
 
   * New upstream version 4.0.3
