--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,9 @@
-php-horde-kronolith (4.0.4-2) UNRELEASED; urgency=low
+php-horde-kronolith (4.1.0-1) UNRELEASED; urgency=low
 
   * Use pristine-tar
+  * New upstream version 4.1.0
 
- -- Mathieu Parent <sathieu@debian.org>  Mon, 27 May 2013 08:46:25 +0200
+ -- Mathieu Parent <sathieu@debian.org>  Wed, 05 Jun 2013 13:26:16 +0200
 
 php-horde-kronolith (4.0.4-1) unstable; urgency=low
 
