--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,9 @@
-php-horde-kronolith (4.1.0-1) UNRELEASED; urgency=low
+php-horde-kronolith (4.1.0-1) unstable; urgency=low
 
   * Use pristine-tar
   * New upstream version 4.1.0
 
- -- Mathieu Parent <sathieu@debian.org>  Wed, 05 Jun 2013 13:26:16 +0200
+ -- Mathieu Parent <sathieu@debian.org>  Wed, 12 Jun 2013 21:24:44 +0200
 
 php-horde-kronolith (4.0.4-1) unstable; urgency=low
 
