--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+php-horde-kronolith (4.1.2-1) UNRELEASED; urgency=low
+
+  * New upstream version 4.1.2
+
+ -- Mathieu Parent <sathieu@debian.org>  Sun, 11 Aug 2013 12:34:49 +0200
+
 php-horde-kronolith (4.1.1-1) unstable; urgency=low
 
   * New upstream version 4.1.1
