--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+php-horde-kronolith (4.1.3-1) UNRELEASED; urgency=low
+
+  * New upstream version 4.1.3
+
+ -- Mathieu Parent <sathieu@debian.org>  Wed, 28 Aug 2013 07:40:28 +0200
+
 php-horde-kronolith (4.1.2-1) unstable; urgency=low
 
   * New upstream version 4.1.2
