--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+php-horde-kronolith (4.1.4-1) UNRELEASED; urgency=low
+
+  * New upstream version 4.1.4
+
+ -- Mathieu Parent <sathieu@debian.org>  Tue, 29 Oct 2013 18:04:29 +0100
+
 php-horde-kronolith (4.1.3-1) unstable; urgency=low
 
   * New upstream version 4.1.3
