--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+php-horde-kronolith (4.2.0~alpha2-1) UNRELEASED; urgency=medium
+
+  * New upstream version 4.2.0~alpha2
+
+ -- Mathieu Parent <sathieu@debian.org>  Sat, 17 May 2014 10:17:26 +0200
+
 php-horde-kronolith (4.1.5-1) unstable; urgency=medium
 
   * New upstream version 4.1.5
