--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,8 @@
-php-horde-kronolith (4.2.0~beta2-1) UNRELEASED; urgency=medium
+php-horde-kronolith (4.2.0~beta2-1) unstable; urgency=medium
 
-  * New upstream version 4.2.0~alpha2
   * New upstream version 4.2.0~beta2
 
- -- Mathieu Parent <sathieu@debian.org>  Wed, 04 Jun 2014 21:49:41 +0200
+ -- Mathieu Parent <sathieu@debian.org>  Mon, 09 Jun 2014 10:23:42 +0200
 
 php-horde-kronolith (4.1.5-1) unstable; urgency=medium
 
