--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-php-horde-kronolith (4.2.1-1) UNRELEASED; urgency=medium
+php-horde-kronolith (4.2.1-1) unstable; urgency=medium
 
   * New upstream version 4.2.1
 
- -- Mathieu Parent <sathieu@debian.org>  Tue, 05 Aug 2014 10:43:21 +0200
+ -- Mathieu Parent <sathieu@debian.org>  Tue, 05 Aug 2014 11:59:48 +0200
 
 php-horde-kronolith (4.2.0-1) unstable; urgency=medium
 
