--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-php-horde-kronolith (4.2.2-1) UNRELEASED; urgency=medium
+php-horde-kronolith (4.2.2-1) unstable; urgency=medium
 
   * New upstream version 4.2.2
 
- -- Mathieu Parent <sathieu@debian.org>  Sun, 07 Sep 2014 22:55:42 +0200
+ -- Mathieu Parent <sathieu@debian.org>  Mon, 08 Sep 2014 08:28:55 +0200
 
 php-horde-kronolith (4.2.1-2) unstable; urgency=medium
 
