--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-php-horde-kronolith (4.2.2-2) UNRELEASED; urgency=medium
+php-horde-kronolith (4.2.2-2) unstable; urgency=medium
 
   * Fixed DEP-8 tests
 
- -- Mathieu Parent <sathieu@debian.org>  Sat, 13 Sep 2014 09:45:59 +0200
+ -- Mathieu Parent <sathieu@debian.org>  Sat, 13 Sep 2014 15:32:02 +0200
 
 php-horde-kronolith (4.2.2-1) unstable; urgency=medium
 
