--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-php-horde-kronolith (4.2.2-3) UNRELEASED; urgency=medium
+php-horde-kronolith (4.2.2-3) unstable; urgency=medium
 
   * Fixed DEP-8 tests, by removing "set -x"
 
- -- Mathieu Parent <sathieu@debian.org>  Sat, 11 Oct 2014 11:35:46 +0200
+ -- Mathieu Parent <sathieu@debian.org>  Sat, 11 Oct 2014 14:58:06 +0200
 
 php-horde-kronolith (4.2.2-2) unstable; urgency=medium
 
