--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+php-horde-kronolith (4.2.7-1) UNRELEASED; urgency=medium
+
+  * New upstream version 4.2.7
+
+ -- Mathieu Parent <sathieu@debian.org>  Mon, 15 Jun 2015 22:06:54 +0200
+
 php-horde-kronolith (4.2.6-1) unstable; urgency=medium
 
   * Update Standards-Version to 3.9.6, no change
