--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-php-horde-kronolith (4.2.7-1) UNRELEASED; urgency=medium
+php-horde-kronolith (4.2.7-1) unstable; urgency=medium
 
   * New upstream version 4.2.7
 
- -- Mathieu Parent <sathieu@debian.org>  Mon, 15 Jun 2015 22:06:54 +0200
+ -- Mathieu Parent <sathieu@debian.org>  Tue, 16 Jun 2015 22:08:08 +0200
 
 php-horde-kronolith (4.2.6-1) unstable; urgency=medium
 
