--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-php-horde-kronolith (4.2.8-1) UNRELEASED; urgency=medium
+php-horde-kronolith (4.2.8-1) unstable; urgency=medium
 
   * New upstream version 4.2.8
 
- -- Mathieu Parent <sathieu@debian.org>  Fri, 19 Jun 2015 20:24:00 +0200
+ -- Mathieu Parent <sathieu@debian.org>  Sat, 20 Jun 2015 21:11:35 +0200
 
 php-horde-kronolith (4.2.7-1) unstable; urgency=medium
 
