--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+php-horde-kronolith (4.2.8-2) UNRELEASED; urgency=medium
+
+  * Remove XS-Testsuite header in d/control
+  * Update gbp.conf
+
+ -- Mathieu Parent <sathieu@debian.org>  Fri, 07 Aug 2015 09:08:45 +0200
+
 php-horde-kronolith (4.2.8-1) unstable; urgency=medium
 
   * New upstream version 4.2.8
