--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,7 @@ php-horde-kronolith (4.2.8-2) UNRELEASED; urgency=medium
 
   * Remove XS-Testsuite header in d/control
   * Update gbp.conf
+  * Use override_dh_link instead of dh deprecated --until/--after
 
  -- Mathieu Parent <sathieu@debian.org>  Fri, 07 Aug 2015 09:08:45 +0200
 
