--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,10 @@
-php-horde-kronolith (4.2.8-2) UNRELEASED; urgency=medium
+php-horde-kronolith (4.2.8-2) unstable; urgency=medium
 
   * Remove XS-Testsuite header in d/control
   * Update gbp.conf
   * Use override_dh_link instead of dh deprecated --until/--after
 
- -- Mathieu Parent <sathieu@debian.org>  Fri, 07 Aug 2015 09:08:45 +0200
+ -- Mathieu Parent <sathieu@debian.org>  Mon, 10 Aug 2015 01:19:34 +0200
 
 php-horde-kronolith (4.2.8-1) unstable; urgency=medium
 
