--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+php-horde-kronolith (4.2.9-1) UNRELEASED; urgency=medium
+
+  * New upstream version 4.2.9
+
+ -- Mathieu Parent <sathieu@debian.org>  Sun, 16 Aug 2015 21:26:30 +0200
+
 php-horde-kronolith (4.2.8-2) unstable; urgency=medium
 
   * Remove XS-Testsuite header in d/control
