--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-php-horde-kronolith (4.2.9-1) UNRELEASED; urgency=medium
+php-horde-kronolith (4.2.9-1) unstable; urgency=medium
 
   * New upstream version 4.2.9
 
- -- Mathieu Parent <sathieu@debian.org>  Sun, 16 Aug 2015 21:26:30 +0200
+ -- Mathieu Parent <sathieu@debian.org>  Mon, 17 Aug 2015 20:00:56 +0200
 
 php-horde-kronolith (4.2.8-2) unstable; urgency=medium
 
