--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+php-horde-kronolith (4.2.9-2) UNRELEASED; urgency=medium
+
+  * Added php5-sqlite depends to phpunit test
+
+ -- Mathieu Parent <sathieu@debian.org>  Mon, 12 Oct 2015 08:12:52 +0200
+
 php-horde-kronolith (4.2.9-1) unstable; urgency=medium
 
   * New upstream version 4.2.9
