--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+php-horde-kronolith (4.2.9-3) UNRELEASED; urgency=medium
+
+  * Upgaded to debhelper compat 9
+
+ -- Mathieu Parent <sathieu@debian.org>  Wed, 21 Oct 2015 07:53:58 +0200
+
 php-horde-kronolith (4.2.9-2) unstable; urgency=medium
 
   * Added php5-sqlite depends to phpunit test
