--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,9 @@
-php-horde-kronolith (4.2.9-3) UNRELEASED; urgency=medium
+php-horde-kronolith (4.2.11-1) UNRELEASED; urgency=medium
 
   * Upgaded to debhelper compat 9
+  * New upstream version 4.2.11
 
- -- Mathieu Parent <sathieu@debian.org>  Wed, 21 Oct 2015 07:53:58 +0200
+ -- Mathieu Parent <sathieu@debian.org>  Fri, 23 Oct 2015 06:25:59 +0200
 
 php-horde-kronolith (4.2.9-2) unstable; urgency=medium
 
