--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+php-horde-kronolith (4.2.13-1) UNRELEASED; urgency=medium
+
+  * New upstream version 4.2.13
+
+ -- Mathieu Parent <sathieu@debian.org>  Sat, 06 Feb 2016 19:28:54 +0100
+
 php-horde-kronolith (4.2.11-1) unstable; urgency=medium
 
   * Upgaded to debhelper compat 9
