--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+php-horde-kronolith (4.2.15-2) UNRELEASED; urgency=medium
+
+  * Update Standards-Version to 3.9.7, no change
+  * Use secure Vcs-* fields
+  * Rebuild with newer pkg-php-tools for the PHP 7 transition
+
+ -- Mathieu Parent <sathieu@debian.org>  Sat, 12 Mar 2016 21:50:00 +0100
+
 php-horde-kronolith (4.2.15-1) unstable; urgency=medium
 
   * New upstream version 4.2.15
