--- a/debian/changelog
+++ b/debian/changelog
@@ -1,11 +1,11 @@
-php-horde-kronolith (4.2.15-2) UNRELEASED; urgency=medium
+php-horde-kronolith (4.2.15-2) unstable; urgency=medium
 
   * Update Standards-Version to 3.9.7, no change
   * Use secure Vcs-* fields
   * Rebuild with newer pkg-php-tools for the PHP 7 transition
   * Replace php5-* by php-* in d/tests/control
 
- -- Mathieu Parent <sathieu@debian.org>  Sat, 12 Mar 2016 21:56:32 +0100
+ -- Mathieu Parent <sathieu@debian.org>  Sun, 13 Mar 2016 20:41:27 +0100
 
 php-horde-kronolith (4.2.15-1) unstable; urgency=medium
 
