--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+php-horde-kronolith (4.2.15-3) UNRELEASED; urgency=medium
+
+  * Fix debian/tests/control: php-sqlite -> php-sqlite3
+
+ -- Mathieu Parent <sathieu@debian.org>  Sat, 19 Mar 2016 23:42:44 +0100
+
 php-horde-kronolith (4.2.15-2) unstable; urgency=medium
 
   * Update Standards-Version to 3.9.7, no change
