--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-php-horde-kronolith (4.2.16-1) UNRELEASED; urgency=medium
+php-horde-kronolith (4.2.16-1) unstable; urgency=medium
 
   * New upstream version 4.2.16
 
- -- Mathieu Parent <sathieu@debian.org>  Tue, 05 Apr 2016 22:14:03 +0200
+ -- Mathieu Parent <sathieu@debian.org>  Tue, 05 Apr 2016 23:38:55 +0200
 
 php-horde-kronolith (4.2.15-3) unstable; urgency=medium
 
