--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+php-horde-kronolith (4.2.16-2) UNRELEASED; urgency=medium
+
+  * Update Standards-Version to 3.9.8, no change
+  * Updated d/watch to use https
+
+ -- Mathieu Parent <sathieu@debian.org>  Mon, 06 Jun 2016 21:41:53 +0200
+
 php-horde-kronolith (4.2.16-1) unstable; urgency=medium
 
   * New upstream version 4.2.16
