--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,9 @@
-php-horde-kronolith (4.2.16-2) UNRELEASED; urgency=medium
+php-horde-kronolith (4.2.16-2) unstable; urgency=medium
 
   * Update Standards-Version to 3.9.8, no change
   * Updated d/watch to use https
 
- -- Mathieu Parent <sathieu@debian.org>  Mon, 06 Jun 2016 21:41:53 +0200
+ -- Mathieu Parent <sathieu@debian.org>  Wed, 08 Jun 2016 21:06:29 +0200
 
 php-horde-kronolith (4.2.16-1) unstable; urgency=medium
 
