--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+php-horde-kronolith (4.2.17-1) UNRELEASED; urgency=medium
+
+  * New upstream version 4.2.17
+
+ -- Mathieu Parent <sathieu@debian.org>  Wed, 06 Jul 2016 23:36:33 +0200
+
 php-horde-kronolith (4.2.16-2) unstable; urgency=medium
 
   * Update Standards-Version to 3.9.8, no change
