--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-php-horde-kronolith (4.2.17-1) UNRELEASED; urgency=medium
+php-horde-kronolith (4.2.17-1) unstable; urgency=medium
 
   * New upstream version 4.2.17
 
- -- Mathieu Parent <sathieu@debian.org>  Wed, 06 Jul 2016 23:36:33 +0200
+ -- Mathieu Parent <sathieu@debian.org>  Thu, 07 Jul 2016 09:00:05 +0200
 
 php-horde-kronolith (4.2.16-2) unstable; urgency=medium
 
