--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-php-horde-kronolith (4.2.18-1) UNRELEASED; urgency=medium
+php-horde-kronolith (4.2.18-1) unstable; urgency=medium
 
   * New upstream version 4.2.18
 
- -- Mathieu Parent <sathieu@debian.org>  Sun, 09 Oct 2016 21:34:08 +0200
+ -- Mathieu Parent <sathieu@debian.org>  Mon, 10 Oct 2016 09:27:22 +0200
 
 php-horde-kronolith (4.2.17-1) unstable; urgency=medium
 
