--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+php-horde-kronolith (4.2.19-1) UNRELEASED; urgency=medium
+
+  * New upstream version 4.2.19
+
+ -- Mathieu Parent <sathieu@debian.org>  Sat, 17 Dec 2016 20:48:58 +0100
+
 php-horde-kronolith (4.2.18-1) unstable; urgency=medium
 
   * New upstream version 4.2.18
