--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-php-horde-kronolith (4.2.19-1) UNRELEASED; urgency=medium
+php-horde-kronolith (4.2.19-1) unstable; urgency=medium
 
   * New upstream version 4.2.19
 
- -- Mathieu Parent <sathieu@debian.org>  Sat, 17 Dec 2016 20:48:58 +0100
+ -- Mathieu Parent <sathieu@debian.org>  Sun, 18 Dec 2016 22:49:45 +0100
 
 php-horde-kronolith (4.2.18-1) unstable; urgency=medium
 
