--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+php-horde-kronolith (4.2.21-1) UNRELEASED; urgency=medium
+
+  * New upstream version 4.2.21
+
+ -- Mathieu Parent <sathieu@debian.org>  Fri, 30 Jun 2017 21:41:41 +0200
+
 php-horde-kronolith (4.2.19-1) unstable; urgency=medium
 
   * New upstream version 4.2.19
