--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+php-horde-kronolith (4.2.22-1) UNRELEASED; urgency=medium
+
+  * New upstream version 4.2.22
+
+ -- Mathieu Parent <sathieu@debian.org>  Tue, 01 Aug 2017 21:40:37 +0200
+
 php-horde-kronolith (4.2.21-1) unstable; urgency=medium
 
   * New upstream version 4.2.21
