--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-php-horde-kronolith (4.2.22-1) UNRELEASED; urgency=medium
+php-horde-kronolith (4.2.22-1) unstable; urgency=medium
 
   * New upstream version 4.2.22
 
- -- Mathieu Parent <sathieu@debian.org>  Tue, 01 Aug 2017 21:40:37 +0200
+ -- Mathieu Parent <sathieu@debian.org>  Tue, 01 Aug 2017 22:38:30 +0200
 
 php-horde-kronolith (4.2.21-1) unstable; urgency=medium
 
