--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+php-horde-kronolith (4.2.23-1) UNRELEASED; urgency=medium
+
+  * New upstream version 4.2.23
+
+ -- Mathieu Parent <sathieu@debian.org>  Mon, 25 Sep 2017 16:17:51 +0200
+
 php-horde-kronolith (4.2.22-1) unstable; urgency=medium
 
   * New upstream version 4.2.22
