--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+php-horde-kronolith (4.2.23-2) UNRELEASED; urgency=medium
+
+  * Update Standards-Version to 4.1.3, no change
+  * Upgrade debhelper to compat 11
+  * Update Vcs-* fields
+
+ -- Mathieu Parent <sathieu@debian.org>  Tue, 03 Apr 2018 23:23:28 +0200
+
 php-horde-kronolith (4.2.23-1) unstable; urgency=medium
 
   * New upstream version 4.2.23
