--- a/debian/changelog
+++ b/debian/changelog
@@ -3,8 +3,10 @@ php-horde-kronolith (4.2.23-2) UNRELEASED; urgency=medium
   * Update Standards-Version to 4.1.3, no change
   * Upgrade debhelper to compat 11
   * Update Vcs-* fields
+  * Use secure copyright format URI
+  * Replace "Priority: extra" by "Priority: optional"
 
- -- Mathieu Parent <sathieu@debian.org>  Tue, 03 Apr 2018 23:23:28 +0200
+ -- Mathieu Parent <sathieu@debian.org>  Thu, 05 Apr 2018 10:43:38 +0200
 
 php-horde-kronolith (4.2.23-1) unstable; urgency=medium
 
