--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-php-horde-kronolith (4.2.23-2) UNRELEASED; urgency=medium
+php-horde-kronolith (4.2.23-2) unstable; urgency=medium
 
   * Update Standards-Version to 4.1.3, no change
   * Upgrade debhelper to compat 11
@@ -6,7 +6,7 @@ php-horde-kronolith (4.2.23-2) UNRELEASED; urgency=medium
   * Use secure copyright format URI
   * Replace "Priority: extra" by "Priority: optional"
 
- -- Mathieu Parent <sathieu@debian.org>  Thu, 05 Apr 2018 10:43:38 +0200
+ -- Mathieu Parent <sathieu@debian.org>  Fri, 06 Apr 2018 13:05:31 +0200
 
 php-horde-kronolith (4.2.23-1) unstable; urgency=medium
 
