--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,9 @@
-php-horde-kronolith (4.2.23-3) UNRELEASED; urgency=medium
+php-horde-kronolith (4.2.23-3) unstable; urgency=medium
 
   * Update Standards-Version to 4.1.4, no change
   * Update Maintainer field
 
- -- Mathieu Parent <sathieu@debian.org>  Mon, 14 May 2018 22:29:25 +0200
+ -- Mathieu Parent <sathieu@debian.org>  Tue, 15 May 2018 16:01:50 +0200
 
 php-horde-kronolith (4.2.23-2) unstable; urgency=medium
 
