--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+php-horde-kronolith (4.2.24-1) UNRELEASED; urgency=medium
+
+  * New upstream version 4.2.24
+
+ -- Mathieu Parent <sathieu@debian.org>  Sun, 07 Oct 2018 12:48:41 +0200
+
 php-horde-kronolith (4.2.23-3) unstable; urgency=medium
 
   * Update Standards-Version to 4.1.4, no change
