--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+php-horde-kronolith (4.2.27-1) UNRELEASED; urgency=medium
+
+  * New upstream version 4.2.27
+
+ -- Mathieu Parent <sathieu@debian.org>  Wed, 04 Sep 2019 21:07:06 +0200
+
 php-horde-kronolith (4.2.25-1) unstable; urgency=medium
 
   * New upstream version 4.2.25
