--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,10 @@
-php-horde-kronolith (4.2.27-1) UNRELEASED; urgency=medium
+php-horde-kronolith (4.2.27-1) unstable; urgency=medium
 
   * New upstream version 4.2.27
   * Bump debhelper from old 11 to 12.
   * d/control: Orphaning package (See #942282)
 
- -- Mathieu Parent <sathieu@debian.org>  Wed, 04 Sep 2019 21:07:06 +0200
+ -- Mathieu Parent <sathieu@debian.org>  Fri, 18 Oct 2019 20:38:43 +0200
 
 php-horde-kronolith (4.2.25-1) unstable; urgency=medium
 
