--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+php-horde-kronolith (4.2.27-2) UNRELEASED; urgency=medium
+
+  * d/control: Add to Uploaders: Mike Gabriel.
+  * d/control: Drop from Uploaders: Debian QA Group.
+
+ -- Mike Gabriel <mike.gabriel@das-netzwerkteam.de>  Sat, 02 May 2020 08:54:43 +0200
+
 php-horde-kronolith (4.2.27-1) unstable; urgency=medium
 
   * New upstream version 4.2.27
