--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-php-horde-kronolith (4.2.27-2) UNRELEASED; urgency=medium
+php-horde-kronolith (4.2.27-2) unstable; urgency=medium
 
   * Re-upload to Debian. (Closes: #959320).
 
@@ -9,8 +9,9 @@ php-horde-kronolith (4.2.27-2) UNRELEASED; urgency=medium
   * d/upstream/metadata: Add file. Comply with DEP-12.
   * d/tests/control: Stop using deprecated needs-recommends restriction.
   * d/copyright: Update copyright attributions.
+  * d/rules: Don't install upstream's INSTALL howto.
 
- -- Mike Gabriel <sunweaver@debian.org>  Wed, 13 May 2020 17:10:29 +0200
+ -- Mike Gabriel <sunweaver@debian.org>  Wed, 13 May 2020 21:15:58 +0200
 
 php-horde-kronolith (4.2.27-1) unstable; urgency=medium
 
