upload to unstable (debian/4.2.28-1)

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-php-horde-kronolith (4.2.28-1) UNRELEASED; urgency=medium
+php-horde-kronolith (4.2.28-1) unstable; urgency=medium
 
   * New upstream version 4.2.28
 
- -- Mike Gabriel <mike.gabriel@das-netzwerkteam.de>  Wed, 08 Jul 2020 21:07:23 +0200
+ -- Mike Gabriel <sunweaver@debian.org>  Wed, 08 Jul 2020 21:08:09 +0200
 
 php-horde-kronolith (4.2.27-4) unstable; urgency=medium
 
